styles/scss/style.scss
@import 'variables';
@import 'mixins' ;

* {
    margin: 0px;
    padding: 0px;
    box-sizing: border-box;
    color: $primary-font-color;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

html {
    font-size: 10px;
    scroll-behavior: smooth;
}

li {
    list-style: none;
}





.subheading{
    padding-top: 3rem;
    font-size: 2.5rem;
    color: $primary-font-color;
   
}

.section {
    margin-top: 8rem;
}

header {
    /* padding: 0 32px; */
    background-color: $primary-background-color;
}

.navBar { 
   
    @include flex-set(row);
    justify-content: space-between;
    align-items: center;
    /* flex-wrap: wrap; */
    /* place-content: center; */
}

.logo {
   font-size: 2rem;
    text-align: center;
    padding: 2rem;
}

.logo h1{
    color: $secondary-font-color;

}

.logo h1:hover{
    color: $primary-font-color;
    cursor: pointer;

}

.logo img {
    width: 100%;
}

.navLinkContainer {
    /* width: 45%; */
}

.hamburger {
    
    margin-right: 2rem;
    cursor: pointer;
    display: none;
}

.bar{
    display: block;
    width: 2.5rem;
    height: 0.3rem;
    margin: 0.5rem auto;
    background-color: #FCFCFC;
}

.navLinks {
    @include flex-set(row,1.5rem);
    width: 100%;
    justify-content: space-between;
    font-size: 2rem;
}

.navLinks :last-child {
    margin-right: 2rem;
}


.navItem {
    list-style: none;
    color: $secondary-font-color;
}

.navItem:hover{
    transform: scale(1.1);
}
.navLink {
    text-decoration: none;
}

.navLink:hover {
    color: $secondary-font-color;
}

.cta {
    padding: 1rem 2rem;
    border-radius: 0.7rem;
    color: $primary-background-color;
    background-color: $secondary-font-color;
}

.cta:hover {
    background-color: $primary-background-color;
}

hr {
   
    border: 0.1rem solid $secondary-font-color;
}


main {
    /* background-color: #282D35 !important; */
    background-image: linear-gradient(rgba(0, 0, 0,0.4),rgba(0, 0, 0,0.4)),
                        url('../../../assets/backgroundImage.jpg');
    background-repeat: no-repeat;
    background-size: cover;
    padding: 5rem 10rem;
}


.home {
    min-height: 73vh;
    @include flex-set(row,3rem);
    align-items: center;
    justify-content: space-between;
}

.introduction {
    @include flex-set(column);
    justify-content: center;
    flex:1.15;
}

.intro_heading {
    color: $primary-font-color;
    font-size: clamp(2rem, 5vw, 6rem);
    /* font-size: 6rem; */
    font-weight: 200;
}

.handwave--image {
    height: 6rem;
}

.name {
    color: $secondary-font-color;
    font-weight: bold;
}


.hide{
    display: none;
}
.profession {
    font-size: 2.5rem;
    color: $optional-font-color;
    font-weight: 200;
}

.company--name {
    color: $secondary-font-color;
    font-weight: bold;
}

.profile_picture {
    flex:1;
    display: grid;
    place-content: center;
}

.profile_picture img {
    width: 100%;
}


/* PROJECT SECTION */
.section_name{
    font-size: 4rem;
    color: $secondary-font-color;
    text-align: center;
    margin-block-end: 8rem;
}

.project_list{
    @include flex-set(column,5rem)
    
}



.project_item{
    @include flex-set(column,3rem);
    /* min-height: 45rem; */
}

.project_item:nth-child(even) .project_description{
    flex-direction: row-reverse;
}



.project_info,
.technology,
.link_button{
    font-size: 1.8rem;
    line-height: 1.4;
    letter-spacing: 0.1rem;
}

.project_title{
   
       text-align: center;
        font-size: 2.5rem;
        color: $secondary-font-color;
    }

.project_description{
    @include flex-set(row,3rem);
   
    align-items: center;
}

.project_content{
    @include flex-set(column,1.5rem);
    align-items: flex-start;
    flex: 1;
  
}
.project_info{
    color: $primary-font-color;
}

.technology{
    
    color: $secondary-font-color;
}

.link_button{
    
    text-decoration: none;
    padding: 1rem 1.5rem;
    border-radius: 0.7rem;
    color: $primary-background-color;
    /* font-weight: 300; */
    /* color: #FCFCFC; */
    background-color: $secondary-font-color;
    /* padding: 2rem; */

}

.link_button:hover{
    color: $secondary-font-color;
    background-color: $primary-background-color;

}
.link_button:hover .fa-link{
    color: $secondary-font-color;
}

.fa-link{
    padding-right: 1rem;
    color: $primary-background-color;
}
.project_image{
    flex: 1;
    object-fit: cover;
}
.project_img{
    max-width: 100%;
    margin-left: auto;
}
/* ABOUT SECTION */

.about {
    @include flex-set(row);
    justify-content: center;
    text-align: center;
   
}



.about_heading {
    @include heading;
}

.about_content {
    font-size: 2rem;
    @include flex-set(column,1rem);
    padding-top: 3rem; 
}

.content{
    @include content(2rem,1.5);
}
.contact {
    text-align: center;
    margin-block-end: 5rem;
}

.contact_heading {
    @include heading
}

.contact_subheading {
    @include subheading
}

.contact_subheading span {
    color: $secondary-font-color;
}

.socialmedia_icons {
    @include flex-set(row,1.5rem);
    justify-content: center;
}

.socialmedia_icon {
    color: $secondary-font-color;
}

.fa-brands{
    color: $primary-font-color;
    font-size: 4rem;
}

.fa-brands:hover{
    color: $secondary-font-color;
    transform: scale(1.1);
}

footer .fa-brands {
    font-size: 3rem;
}

.copyrights {
    display: flex;
    justify-content: space-around;
}

.footer {
    background-color: $primary-background-color;
    @include flex-set(row);
    justify-content: space-around;
    padding: 2.5rem;
}

.footer p {
    justify-content: center;
    font-size: 2rem;
}

/* media screen */

@media (max-width: 690px) {
    main {
        padding: 2rem 5rem;

    }

    .section {
        margin-top: 4rem;
    }
    
    .logo h1{
        font-size: 2.5rem;
    }
    .hamburger {
        display: block;
    }

    .navLinkContainer {
        display: none;
    }


     .home {
        height: 80vh;
        /* display: flex;
        flex-direction: column;
        /* align-items: center;
        justify-content: center; */
        /* text-align: center;  */
    }

    .introduction {
        gap: 1rem;
    } 

    .intro_heading{
        font-size: 3.4rem;
    }

    .handwave--image {
        height: 3.5rem;
    }
    .profession{
        font-size: 2rem;
    }
    .profile_picture {
        display: none
    }

    .about_heading{
        font-size: 2.5rem;
    }
    .about_content{
        gap: 0.8rem;
        padding-top: 1rem;
        font-size: 1.8rem;
    }
    
    .content{
        @include content(1.8rem,1.4);
    }
    /* Project Section */

    .section_name{
        font-size: 3rem;
    }
    .project_item:nth-child(even) .project_description{
        flex-direction: column-reverse;
    }
   

    .project_item{
        gap: 2rem;
    }
    .project_content{
        align-items: center;
    }
    .project_info,
    .technology,
    .link_button{
    font-size: 1.6rem;
    line-height: 1.3;
    letter-spacing: 0.1rem;
    }
   
    .contact_heading{
        font-size: 2.5rem;

    }

    .footer{
        @include flex-set(column,1rem);
        padding: 1.5rem;
        text-align: center;
    }
    .iconimage{
        width:3rem
    }
    .contact_subheading{
        /* padding-top: 1rem; */
        font-size: 1.8rem;
    }

    .fa-brands{
        font-size: 3rem;
    }


}

@media (max-width: 1050px){
    
    .addBreak{
        display: inline;
    }

    .profile_picture{
        object-fit: contain;
    }
    .project_list{
        align-items: center;
    }
    .project_item:nth-child(even) .project_description{
        flex-direction: column-reverse;
    }
    .project_description{
        @include flex-set(column-reverse,2rem);
    }
    .project_item{
        max-width: 60rem;
    }
}

